Add converting functions to plugin
We use the color() function in places on the site, which causes
this convertor to fail as it didnt close the final brackets correctly.

This change will run postcss-cssnext to convert the functions to color
strings which can then be passed through the rest of our convertor.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "parse-color": "^1.0.0",
     "postcss": "^6.0.6",
-    "postcss-color-function": "^4.0.0",
+    "postcss-cssnext": "^2.9.0",
     "postcss-simple-vars": "^4.0.0",
     "q": "^1.5.0"
   },
