--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-galen-color-variables",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Export PostCSS color variables to Galen Test Suite syntax",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/samuelthomps0n/postcss-galen-color-variables.git"
+    "url": "git+ssh://git@github.com/samuelthomps0n/postcss-galen-color-variables.git"
   },
   "keywords": [
     "PostCSS",
@@ -17,7 +17,7 @@
   ],
   "author": "Samuel Thompson <sam@samuelthompson.co.uk>",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/samuelthomps0n/postcss-galen-color-variables#readme",
+  "homepage": "https://github.com/samuelthomps0n/postcss-galen-color-variables#readme",
   "dependencies": {
     "parse-color": "^1.0.0",
     "postcss": "^6.0.6",
